	* doc/make.texi: Enhance documentation for output sync, and remove
	MODE assignment for --trace.
	* make.1: Remove MODE assignment for --trace.
	* Makefile.am: Add new files.
	* NMakefile.template: Ditto.
	* SMakefile.template: Ditto.
	* build_w32.bat: Ditto.
	* dosbuild.bat: Ditto.
	* make.lnk: Ditto.
	* make_nsvc_net2003.vcproj: Ditto.
	* makefile.vms: Ditto.
	* po/POTFILES.in: Ditto.

2013-07-22  Paul Smith  <psmith@gnu.org>

	* implicit.c (pattern_search): Use PARSE_SIMPLE_SEQ() even for
	non-second expansion prerequisites, to handle globbing in patterns.
	Fixes Savannah bug #39310.

	* dep.h (PARSE_SIMPLE_SEQ): Macro for simple file sequence parsing.
	* default.c (set_default_suffixes): Use it.
	* file.c (split_prereqs): Ditto.
	* main.c (main): Ditto.
	* read.c (eval): Ditto.
	* rule.c (install_pattern_rule): Ditto.
	* file.c (split_prereqs): Use PARSEFS_NONE instead of 0.

2013-07-21  Paul Smith  <psmith@gnu.org>

	Cleanups detected by cppcheck.  Fixes Savannah bug #39158.
	* arscan.c (ar_scan): Reduce the scope of local variables.
	* dir.c (vms_hash): Ditto.
	(find_directory): Ditto.
	(file_impossible_p): Ditto.
	* expand.c (variable_expand_string): Ditto.
	* function.c (func_sort): Ditto.
	(func_and): Ditto.
	* job.c (reap_children): Ditto.
	(exec_command): Ditto.
	* main.c (main): Ditto.
	* misc.c (collapse_continuations): Ditto.
	* read.c (eval): Ditto.
	(parse_file_seq): Ditto.
	* vpath.c (gpath_search): Ditto.
	(selective_vpath_search): Ditto.
	* job.c (is_bourne_compatible_shell): Simplify for non-Windows systems.
	* remake.c (f_mtime): Remove duplicate test.
	* signame.c (strsignal): Fix bogus conditional.

	* job.c (assign_child_tempfiles): Assign OUTFD to -1 for safety.
	(start_job_command): Don't test output_sync and sync_cmd: redundant.
	Changes suggested by Frank Heckenbach <f.heckenbach@fh-soft.de>.

2013-07-14  Paul Smith  <psmith@gnu.org>

	* filedef.h (update_status): Convert UPDATE_STATUS from a char to